styles.css
/* General Styling */

* {
    box-sizing: border-box;
}

html {
    font-family: "Lora", Calibri, Tahoma, sans-serif;
}

body {
    /* background-color: #f7e5ff; */
    background-color: #FFD6FF;
    line-height: 1.5;

    @media (width > 720px) {
        font-size: 1.25rem;
    }
}

h1 {
    font-family: "Tangerine", cursive;
    font-weight: bold;
    font-size: 3rem;
    text-align: center;
    line-height: 1.3;
    color: #38085D;
    margin: 0;
    /* background-color: rgb(252, 213, 253); */
    background-color: #C8B6FF;

    @media (width > 720px) {
        font-size: 5.5rem;
    }
}

/* header {
    background-image: url(images/arrangements/flower_stock.jpg);
    padding: 2rem;
    /* background-repeat: no-repeat; */
    /* background-position: center;
    background-size: cover;
} */ 

h2 {
    color: #412456;
    font-size: 1.3rem;

    @media (width > 720px) {
        font-size: 2rem;
    }
}

h3 {
    text-align: center;
    line-height: 1;
}

section {
    margin-block: 50px;
}

img {
    display: block;
    block-size: auto;
    inline-size: 100%;
    /* max-inline-size: 100%; */
}

a {
    color: #9D4EDD;
    text-decoration: none;
}

a:visited {
    color: green;
}

a:hover, a:focus-visible {
    color: #5A189A;
}

a:active {
    color: #9D4EDD;
}
span {
    font-weight: bold;
}

label {
    display: block;
    font-weight: bold;
    margin-block-start: 1rem;
    color: #7943a0;
    font-size: 1rem;

    @media (width > 720px) {
        font-size: 1.30rem;
        margin-block-start: .75rem;
    }
}

input {
    border: 2px solid #ccc;
    border-radius: 5px;
    padding: 5px;
}

input, textarea {
    inline-size: 100%;
    padding: 7px;
    margin-block-start: 0.5rem;
    margin-block-end: 1rem;
    border: 2px solid #b37feb;
    border-radius: 5px;
    font-size: 1rem;
    font-family: inherit;
}

legend {
    color: #466C2D;
    font-weight: bold;
}

fieldset {
    margin-block-end: 2rem;
}

/* footer {
    font-size: .75rem;
    padding: 10px;
    color: rgb(255, 255, 255);
    text-align: center;
    position: sticky;
    margin-block-end: 0;

    @media (width > 720px) {
        font-size: 1rem;
    }
} */

/* Specific Styling */

.wrapper {
    max-inline-size: 1000px;
    margin-inline: auto;
}

.colored-bg {
    background-color: #C8B6FF;
    /* color: #ffffff; */
    padding: 10px;
    /* border: 5px solid rgb(250, 132, 215); */
    border-radius: 10px;
}

.colored-bg p {
    color: #2E0D47;
}

.primary-navigation ul {
    display: flex;
    justify-content: center;
    font-size: .75rem;
    gap: 18px;
    list-style: none;
    /* background-color: #E7C6FF; */
    background-color: #C8B6FF;
    margin: 0;
    padding: 10px;

    @media (width > 720px) {
        font-size: 1.5rem;
        gap: 25px;
    }
}

.primary-navigation a {
    color: #1A3902;
    font-weight: bold;  
}

.primary-navigation a:hover, a:focus-visible {
    color: #173600;
    transition: color 0.3s ease;
}

.three-column-layout {
    display: grid;
    gap: 20px;
    margin-block-end: 30px;
    grid-template-columns: 1fr;

    @media (width > 720px) {
        grid-template-columns: 1fr 1fr 1fr;
    }
}

.image-gallery {
    display: grid;
    gap: 20px;
    margin-block-end: 30px;
    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    padding-inline: 1rem;

    @media (width <= 600px) {
        grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
    }
}

.image-gallery figure {
    aspect-ratio: 1 / 1;
    overflow: hidden;
    /* border: 4px solid #7943a0; */
    background-color: white;
    border-radius: 8px;
    margin: 0;
    padding: 0;
}

.image-gallery img {
    inline-size: 100%;
    block-size: 100%;
    object-fit: cover;
    display: block;
}

/* .image-gallery img:hover {
    transform: scale(1.5);
    transform-origin: 40% 20%;
} */


.img-border {
    border: 3px solid #63006C;
    padding: 10px;
    text-align: center;
    border-radius: 10px;
}

.button {
    border: 3px solid #63006C;
    background-color: white;
    margin-inline: auto;
    padding: 5px;
    border-radius: 5px;
    margin-block-start: 20px;
    font-weight: bold;
    display: inline-block;
    transition: background-color 0.3s ease, color 0.3s ease;
}

.button:hover, .button:focus-visible {
    background-color: #573073;
    color: white;   
}

.contact-form {
    display: block;
}

.quick-links ul {
    font-size: 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    gap: 8px;
    flex-direction: row;
    list-style: none;
    margin: 0 0 1rem;
    padding: .50rem;

    @media (width < 480px) {
        flex-direction: column;
        gap: 5px;
        font-size: 0.75rem;
        align-items: center;
    }
}

.quick-links a {
    color: #045904;
    font-weight: bold;
}

.quick-links a:hover, a:focus-visible {
    text-decoration: underline;
    color: #412A41;
    transition: color 0.3s ease;
}

.small-format {
    font-size: 0.80rem;
    font-weight: normal;
}

.contact-section {
    margin: auto;
    display: flex;
    justify-content: center;
    /* background-color: #d5ccff; */
    /* border: 5px solid #efccff; */
    border-radius: 10px;
    padding-block-end: 2rem;
}

.form-btn {
    margin-block-start: 1.3rem;
    padding-block: .45rem;
    padding-inline: 2rem;
    font-size: 1.1rem;
    font-weight: bold;
    background-color: #7943a0;
    border: none;
    border-radius: 5px;
    color: white;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.form-btn:hover {
    background-color: #a165ce;
}


.footer-wrapper {
    max-inline-size: 1000px;
    margin-inline: auto;
    padding: 1rem;
}

.contact-info {
    font-size: 0.85rem;
    line-height: 1.6;
    text-align: center;
}

.contact-info a {
    color: #410C55;
}

.colored-bg .contact-info {
    color: #042F04;
}

